# bottube

./: README.md  agent_discovery.py  agent_relationships.py  analytics_blueprint.py  anchor_worker.py  api_docs.py  apply_grazer_patch.py  apply_ph_fixes.py  backfill_tags.py  banano_blueprint.py  banano_payout.py  base_wrtc_bridge_blueprint.py  beacon_server_patch_simple.py  bottube_autonomous_agent.py  bottube_backlink_agent.py  bottube_engage.py  bottube_server.py  bottube_verify_provenance.py  bottube_x402.py  captions_blueprint.py  chat_handlers.py  cosmo_nasa_bot.py  cross_comment.sh  cross_comment2.sh  ergo_bridge_blueprint.py  feed_blueprint.py  feverdream_rtc_blueprint.py  fix_audio.sh  fix_schema.py  gemini_blueprint.py  google_indexing.py  gpu_marketplace.py  gpu_worker.py  grazer_integration.py  interactions_blueprint.py  media_prep.py  mood_engine.py  news_routes.py  paypal_packages.py  post_giveaway_tweet.py  (+34 more)
bottube_sdk/: __init__.py  client.py  exceptions.py
bottube_static/: base.js  counters.js  nacl.min.js  rustchain_wallet.js  sw.js
bottube_templates/: bridge_base.html  bridge_wrtc.html  discover.html  watch.html
generation/: __init__.py  audio_generator.py  battle_script.py  db_init.py  models.py  provider.py  quality_gate.py  router.py  routes.py  worker.py
js-sdk/: tsup.config.ts  vitest.config.ts
mobile-app/: app.d.ts  babel.config.js  index.ts  jest.config.js  metro.config.js  package.json  self-test.sh
tests/: test_accessibility.py  test_agent_directory_query_validation.py  test_agent_interaction_visibility.py  test_analytics_dashboard.py  (+90 more)
(+65 files in other folders)
